# ckad-prep

./: .gitignore  .markdownlint.json  ConfigMapsSecrets.md  Deployments.md  Helm.md  Ingress.md  Pods.md  README.md  Services.md  Storage.md
fundamentals/ConfigMap/: cm_example_1.yaml  mongo.deployment.yaml  sec_not_advised.yaml
fundamentals/Deployment/: nginx_deployment_spec.yaml  node_app_dep1.yaml
fundamentals/Helm/guestbook_1/: Chart.yaml
fundamentals/Helm/guestbook_2/charts/backend/: Chart.yaml
fundamentals/Helm/guestbook_2/charts/database/: Chart.yaml
fundamentals/Helm/guestbook_3/charts/backend/: values.yaml
fundamentals/Helm/guestbook_3/charts/database/templates/: mongodb-service.yaml  mongodb.yaml
fundamentals/Helm/guestbook_3/charts/frontend/: values.yaml
fundamentals/Helm/guestbook_3/charts/frontend/templates/: frontend-configmap.yaml  frontend-service.yaml  ingress.yaml
fundamentals/Pod/: nginx_pod_health.yaml  nginx_pod_spec.yaml  pod_pvc_example.yaml
fundamentals/Service/: nginx_cluster_ip.yaml  nginx_node_port.yaml  node_app_lb_service.yaml
fundamentals/Storage/: mongo_storage_classes_example.yaml  pv_azure_example.yaml  pvc_example.yaml  sc_pv_example.yaml  sc_pvc_example.yaml  vol_aws_example.yaml  vol_azure_example.yaml  vol_docker_host_path.yaml  vol_empty_dir_example.yaml  vol_gcp_example.yaml  vol_host_path_example.yaml  vol_nginx_empty_dir.yaml
fundamentals/code/configmap_demo/: node.deployment.yaml  server.js
fundamentals/code/rolling_updates/node-app/v2/: server.js
practices/cmaps/: 1_env_cmap.yaml  1_setting.env
practices/cmaps/demo/: README.md  node.deployment.yaml  server.js  settings.configmap.yaml
practices/dashboard/: README_2023_01_24,md
practices/deployments/: 1_nginx_dep.yaml
practices/deployments/zero_down_time_dep/code/: docker-compose.yaml
practices/deployments/zero_down_time_dep/code/node_app/v1/: server.js
practices/deployments/zero_down_time_dep/code/node_app/v3/: server.js
practices/deployments/zero_down_time_dep/dep/: node_app_dep2.yaml  node_app_dep3.yaml
practices/deployments/zero_down_time_dep/serv/: node_app_lb_serv.yaml
practices/secrets/: mongo_deployment.yaml
practices/services/: 1_nginx_demo_clusterip.yaml  1_nginx_demo_serv.yaml  2_nginx_demo_nodeport.yaml  3_nginx_demo_loadbalancer.yaml
practices/storage/: 1_nginx_demo_emptydir.yaml  2_docker_demo_hostpath.yaml  3_mongo_demo_storage_class.yaml
prototypes/gpu_workload_v1/redis_consumer/: Chart.yaml  values.yaml
prototypes/gpu_workload_v1/redis_consumer/templates/: consumer-job.yaml
prototypes/gpu_workload_v1/redis_producer/: Chart.yaml
prototypes/gpu_workload_v1/redis_producer/charts/producer/: Chart.yaml  values.yaml
prototypes/gpu_workload_v1/redis_producer/charts/producer/templates/: producer-pod.yaml
prototypes/gpu_workload_v1/redis_producer/charts/server/: Chart.yaml  values.yaml
prototypes/gpu_workload_v1/redis_producer/charts/server/templates/: server-pod.yaml  server-service.yaml
prototypes/gpu_workload_v1/redis_publisher/charts/publisher/: Chart.yaml
prototypes/gpu_workload_v1/redis_publisher/charts/publisher/templates/: publisher-job.yaml
prototypes/gpu_workload_v1/redis_publisher/charts/server/templates/: server-pod.yaml
prototypes/gpu_workload_v1/redis_worker/: Chart.yaml  values.yaml
prototypes/gpu_workload_v1/redis_worker/templates/: worker-job.yaml
prototypes/gpu_workload_v2/redis_publisher/: Chart.yaml
prototypes/gpu_workload_v2/redis_publisher/charts/publisher/: values.yaml
prototypes/gpu_workload_v2/redis_publisher/charts/publisher/templates/: publisher-job.yaml
prototypes/gpu_workload_v2/redis_publisher/charts/server/: Chart.yaml
prototypes/gpu_workload_v2/redis_publisher/charts/server/templates/: server-service.yaml
prototypes/gpu_workload_v2/redis_worker/: values.yaml
prototypes/gpu_workload_v2/redis_worker/templates/: worker-job.yaml
prototypes/image-repos/cuda-devel-redis/: Dockerfile
prototypes/image-repos/cuda-devel-redis/redis-utils/: CMakeLists.txt
prototypes/image-repos/cuda-devel-redis/redis-utils/include/: rqueue.h  subscriber.h
prototypes/image-repos/cuda-devel-redis/redis-utils/src/: consumer.cpp  producer.c  publisher.cpp  rqueue.cpp  subscriber.cpp
prototypes/image-repos/cuda-redis-cpp/redis-utils/include/: publisher.h
prototypes/image-repos/cuda-redis-cpp/redis-utils/src/: pub_daemon.cpp  sub_daemon.cpp
prototypes/image-repos/cuda-redis-py/: Dockerfile  daemon.py  publisher.py  worker.py
testbed/: README.md  docker-compose-redis.yaml  docker-compose-v2.yaml  docker-compose-v3.yaml  docker-compose.yaml
testbed/c-hiredis-combined/src/: consumer.cpp
testbed/c-hiredis-consumer/: CMakeLists.txt
testbed/c-hiredis-consumer/include/: rqueue.h
testbed/c-hiredis-consumer/src/: main.c  main.cpp  rqueue.cpp
testbed/c-hiredis-producer/: .gitignore
testbed/c-hiredis-producer/src/: main.c
testbed/hiredis-stream-example/: stream.c
testbed/redis-consumer-c/: Dockerfile
testbed/redis-consumer-c/redis-consumer/src/: main.cpp  rqueue.cpp
testbed/redis-consumer-py/: Dockerfile  consumer.py
testbed/redis-cpp-queue/: CMakeLists.txt  README.md
testbed/redis-cpp-queue/include/: base.h  publisher.h  subscriber.h
testbed/redis-cpp-queue/src/: main.cpp  pub_daemon.cpp  sub_daemon.cpp  subscriber.cpp
testbed/redis-producer-c/: Dockerfile
testbed/redis-producer-c/redis-producer/: CMakeLists.txt
testbed/redis-producer-c/redis-producer/src/: main.c
testbed/redis-producer-py/: Dockerfile  producer.py
testbed/redis-py/: Dockerfile
